[tool.poetry]
name = "user-authentication"
version = "0.1.0"
description = ""
authors = ["wajidminhas <shanitent667@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
python-multipart = "^0.0.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bycrypt"], version = "^1.7.4"}
sqlmodel = "^0.0.19"
psycopg = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
